	  scrolled region, and properly scroll more than editwinrows
	  lines; and change the movement functions that use
	  edit_scroll() to (a) set current and current_x before calling
	  it, and (b) no longer call edit_redraw() afterward, as it's
	  now unnecessary.  These changes eliminate redundant screen
	  updates when the mark is on, since the mark display depends on
	  current and current_x.  Changes to edit_scroll(),
	  do_page_up(), do_page_down(), do_up(), and do_down(). (DLR)
	- Consistently make the fg and bg colortype struct entries and
	  any variables used to hold them shorts.  Changes to
	  do_colorinit() (renamed color_init()), color_to_int() (renamed
	  color_to_short()), and parse_colors(). (DLR)
	- Change color handling to save only the extension and color
	  regex strings constantly,  and to actually compile them on an
	  as-needed basis.  Also, make a color syntax specified on the
	  command line override the syntax associated with the current
	  file extension, add a "default" syntax that takes no
	  extensions for those files that don't match any other
	  syntax's extensions, and add a "none" syntax that's the same
	  as having no syntax at all.  Changes to update_color(),
	  thanks_for_all_the_fish(), nregcomp(), parse_syntax(), and
	  parse_colors(). (Brand Huntsman and DLR)
	- Various other color fixes.  Handle unspecified foreground
	  colors properly, treat syntax names case sensitively, flag
	  duplicate syntax names as errors, don't automatically
	  reinitialize the displayed colors every time we update the
	  current buffer's colors (since the buffer may not be displayed
	  immediately), don't bother doing complete refreshes of the
	  screen when color support is enabled if there's no regex
	  associated with the current file, and rename variable
	  exttype->val to exttype->ext, for consistency.  Changes to
	  do_colorinit() (renamed color_init()), update_color() (renamed
	  color_update()), write_file(), do_input(), do_output(), and